[package]
name = "hello-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
engine = "0.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
rscam = "0.5.5"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
warp = "0.3.7"
watch = "0.2.3"
zerofrom-derive = "0.1.5"

[package.metadata.cross.target.arm-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libv4l-dev:$CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libjpeg-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libv4l-dev:$CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libjpeg-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libv4l-dev:$CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libjpeg-dev:$CROSS_DEB_ARCH",
]
