[package]
name = "raptor-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "serve-command"
path = "src/serve_command.rs"

[dependencies]
axum = "0.7.9"
evdev = "0.12.2"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-util"] }
