[package]
name = "raptor-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "serve-command"
path = "src/serve_command.rs"

[[bin]]
name = "fetch-command"
path = "src/fetch_command.rs"

[dependencies]
axum = "0.7.9"
evdev = "0.12.2"
reqwest = { version = "0.12.9", features = ["json"] }
rppal = "0.22.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-util"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.133"
chrono = "0.4.39"
